--- a/client-transactions-report/pom.xml
+++ b/client-transactions-report/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.abnamro</groupId>
 	<artifactId>client-transactions-report</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<packaging>jar</packaging>
 	<name>client-transactions-report</name>
 	<description>Summary Reports of Client Transactions</description>
